--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -381,6 +381,7 @@ cmake:
   arch: [cmake]
   debian: [cmake]
   fedora: [cmake]
+  freebsd: [cmake]
   gentoo: [dev-util/cmake]
   macports: [cmake]
   opensuse: [cmake]
@@ -598,6 +599,7 @@ eigen:
     stretch: [libeigen3-dev]
     wheezy: [libeigen3-dev]
   fedora: [eigen3-devel]
+  freebsd: [eigen]
   gentoo: [dev-cpp/eigen]
   macports: [eigen3]
   opensuse: [libeigen3-devel]
@@ -612,6 +614,7 @@ eigen2:
     jessie: [libeigen2-dev]
     wheezy: [libeigen2-dev]
   fedora: [eigen2-devel]
+  freebsd: [eigen2]
   gentoo: ['dev-cpp/eigen:2']
   opensuse: [libeigen2-devel]
   ubuntu: [libeigen2-dev]
@@ -619,6 +622,7 @@ emacs:
   arch: [emacs]
   debian: [emacs]
   fedora: [emacs]
+  freebsd: [emacs]
   gentoo: [virtual/emacs]
   ubuntu: [emacs]
 enblend:
@@ -671,6 +675,7 @@ ffmpeg:
     stretch: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
     wheezy: [ffmpeg, libavcodec-dev, libavformat-dev, libavutil-dev, libswscale-dev]
   fedora: [ffmpeg-devel]
+  freebsd: [ffmpeg]
   gentoo: [virtual/ffmpeg]
   macports: [ffmpeg]
   opensuse: [ffmpeg]
@@ -1103,7 +1108,7 @@ gtk2:
   arch: [gtk2]
   debian: [libgtk2.0-dev]
   fedora: [gtk2-devel]
-  freebsd: [gtk20]
+  freebsd: [gtk2]
   gentoo: ['x11-libs/gtk+:2']
   macports: [gtk2]
   opensuse: [gtk2-devel]
@@ -1122,6 +1127,7 @@ hddtemp:
   arch: [hddtemp]
   debian: [hddtemp]
   fedora: [hddtemp]
+  freebsd: [python27]
   gentoo: [app-admin/hddtemp]
   macports: [python27]
   opensuse: [hddtemp]
@@ -1210,6 +1216,7 @@ jasper:
   arch: [jasper]
   debian: [libjasper-dev]
   fedora: [jasper-devel]
+  freebsd: [jasper]
   gentoo: [media-libs/jasper]
   macports: [jasper]
   opensuse: [libjasper-devel]
@@ -1465,6 +1472,7 @@ libconsole-bridge-dev:
   arch: [console-bridge]
   debian: [libconsole-bridge-dev]
   fedora: [console-bridge-devel]
+  freebsd: [ros-console_bridge]
   gentoo: [dev-libs/console_bridge]
   opensuse: [libconsole_bridge0]
   slackware: [console_bridge]
@@ -1959,6 +1967,7 @@ libjpeg:
     stretch: [libjpeg-dev]
     wheezy: [libjpeg8-dev]
   fedora: [libjpeg-turbo-devel]
+  freebsd: [libjpeg-turbo]
   gentoo: [virtual/jpeg]
   macports: [jpeg]
   opensuse: [libjpeg62-devel]
@@ -2168,6 +2177,7 @@ libogg:
   arch: [libogg]
   debian: [libogg-dev]
   fedora: [libogg-devel]
+  freebsd: [libogg]
   gentoo: [media-libs/libogg]
   macports: [libogg]
   opensuse: [libogg-devel]
@@ -2302,6 +2312,7 @@ libpcl-all:
     jessie: [libpcl1.7]
     stretch: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
   fedora: [pcl, pcl-tools]
+  freebsd: [pcl]
   gentoo: [sci-libs/pcl]
   macports: [libpcl]
   opensuse: [pcl]
@@ -2322,6 +2333,7 @@ libpcl-all-dev:
   arch: [pcl]
   debian: [libpcl-dev]
   fedora: [pcl-devel]
+  freebsd: [pcl]
   gentoo: [sci-libs/pcl]
   macports: [libpcl]
   opensuse: [pcl]
@@ -2366,6 +2378,7 @@ libpng-dev:
     stretch: [libpng-dev]
     wheezy: [libpng12-dev]
   fedora: [libpng-devel]
+  freebsd: [png]
   gentoo: [media-libs/libpng]
   macports: [libpng]
   opensuse: [libpng12-devel]
@@ -2386,6 +2399,7 @@ libpng12-dev:
   arch: [libpng]
   debian: [libpng12-dev]
   fedora: [libpng12-devel]
+  freebsd: [png]
   gentoo: ['media-libs/libpng:1.2']
   macports: [libpng]
   opensuse: [libpng12-devel]
@@ -2395,6 +2409,7 @@ libpoco-dev:
   arch: [poco]
   debian: [libpoco-dev]
   fedora: [poco-devel]
+  freebsd: [poco-ssl]
   gentoo: [dev-libs/poco]
   macports: [poco]
   opensuse: [poco-devel]
@@ -2549,6 +2564,7 @@ libqhull:
   arch: [qhull]
   debian: [libqhull-dev]
   fedora: [qhull-devel]
+  freebsd: [qhull]
   gentoo: [media-libs/qhull]
   macports: [qhull]
   opensuse: [qhull-devel]
@@ -2617,6 +2633,7 @@ libqt5-core:
   arch:   [qt5-base]
   debian: [libqt5core5a]
   fedora: [qt5-qtbase]
+  freebsd: [qt5-core]
   gentoo: ['dev-qt/qtcore:5']
   opensuse: [libQt5Core5]
   slackware: [qt5]
@@ -2625,6 +2642,7 @@ libqt5-gui:
   arch:   [qt5-base]
   debian: [libqt5gui5]
   fedora: [qt5-qtbase-gui]
+  freebsd: [qt5-gui]
   gentoo: ['dev-qt/qtgui:5']
   opensuse: [libQt5Gui5]
   slackware: [qt5]
@@ -2633,12 +2651,14 @@ libqt5-network:
   arch:   [qt5-base]
   debian: [libqt5network5]
   fedora: [qt5-qtbase]
+  freebsd: [qt5-network]
   gentoo: ['dev-qt/qtnetwork:5']
   ubuntu: [libqt5network5]
 libqt5-opengl:
   arch:   [qt5-base]
   debian: [libqt5opengl5]
   fedora: [qt5-qtbase]
+  freebsd: [qt5-opengl]
   gentoo: ['dev-qt/qtopengl:5']
   opensuse: [libQt5OpenGL5]
   slackware: [qt5]
@@ -2654,6 +2674,7 @@ libqt5-printsupport:
   arch:   [qt5-base]
   debian: [libqt5printsupport5]
   fedora: [qt5-qtbase]
+  freebsd: [qt5-printsupport]
   gentoo: ['dev-qt/qtprintsupport:5']
   ubuntu: [libqt5printsupport5]
 libqt5-sql:
@@ -2663,17 +2684,20 @@ libqt5-sql:
     jessie: [libqt5sql5]
     stretch: [libqt5sql5]
   fedora: [qt5-qtbase]
+  freebsd: [qt5-sql]
   gentoo: ['dev-qt/qtsql:5']
   ubuntu: [libqt5sql5]
 libqt5-svg-dev:
   debian: [libqt5svg5-dev]
   fedora: [qt5-qtsvg-devel]
+  freebsd: [qt5-svg]
   gentoo: ['dev-qt/qtsvg:5']
   ubuntu: [libqt5svg5-dev]
 libqt5-widgets:
   arch:   [qt5-base]
   debian: [libqt5widgets5]
   fedora: [qt5-qtbase]
+  freebsd: [qt5-widgets]
   gentoo: ['dev-qt/qtwidgets:5']
   opensuse: [libQt5Widgets5]
   slackware: [qt5]
@@ -2681,6 +2705,7 @@ libqt5-widgets:
 libqt5x11extras5-dev:
   debian: [libqt5x11extras5-dev]
   fedora: [qt5-qtx11extras-devel]
+  freebsd: [qt5-x11extras]
   gentoo: ['dev-qt/qtx11extras:5']
   ubuntu: [libqt5x11extras5-dev]
 libqtgui4:
@@ -2857,6 +2882,7 @@ libtheora:
   arch: [libtheora]
   debian: [libtheora-dev]
   fedora: [libtheora-devel]
+  freebsd: [libtheora]
   gentoo: [media-libs/libtheora]
   macports: [libtheora]
   opensuse: [libtheora-devel]
@@ -2872,6 +2898,7 @@ libtiff-dev:
     stretch: [libtiff5-dev]
     wheezy: [libtiff5-alt-dev]
   fedora: [libtiff]
+  freebsd: [tiff]
   gentoo: [media-libs/tiff]
   macports: [tiff]
   opensuse: [libtiff-devel]
@@ -2941,6 +2968,7 @@ libturbojpeg:
   arch: [libjpeg-turbo]
   debian: [libturbojpeg1, libturbojpeg1-dev]
   fedora: [turbojpeg-devel]
+  freebsd: [libjpeg-turbo]
   gentoo: [media-libs/libjpeg-turbo]
   ubuntu: [libturbojpeg, libjpeg-turbo8-dev]
 libudev-dev:
@@ -3076,6 +3104,7 @@ libv4l-dev:
   arch: [v4l-utils]
   debian: [libv4l-dev]
   fedora: [libv4l-devel]
+  freebsd: [libv4l]
   gentoo: [media-libs/libv4l]
   opensuse: [libv4l-devel]
   slackware:
@@ -3105,6 +3134,7 @@ libvtk:
     stretch: [libvtk6-dev]
     wheezy: [libvtk5-dev]
   fedora: [vtk-devel]
+  freebsd: [vtk6]
   gentoo: ['sci-libs/vtk[boost,python,qt5]']
   macports: [vtk-devel]
   opensuse: [vtk-devel]
@@ -3130,6 +3160,7 @@ libvtk-java:
     stretch: [libvtk6-java]
     wheezy: [libvtk-java]
   fedora: [vtk-java]
+  freebsd: [vtk6]
   gentoo: ['sci-libs/vtk[java]']
   opensuse: [vtk-java]
   slackware: [VTK]
@@ -3154,6 +3185,7 @@ libvtk-qt:
     stretch: [libvtk6-qt-dev]
     wheezy: [libvtk5-qt4-dev]
   fedora: [vtk-qt]
+  freebsd: [vtk6]
   gentoo: ['sci-libs/vtk[qt5,rendering]']
   opensuse: [vtk-qt]
   slackware: [VTK]
@@ -3398,6 +3430,7 @@ lz4:
   arch: [lz4]
   debian: [liblz4-dev]
   fedora: [lz4-devel]
+  freebsd: [liblz4]
   gentoo: [app-arch/lz4]
   opensuse: [lz4]
   slackware: [lz4]
@@ -3713,7 +3746,7 @@ opengl:
   arch: [mesa]
   debian: [libgl1-mesa-dev, libglu1-mesa-dev]
   fedora: [mesa-libGL-devel, mesa-libGLU-devel]
-  freebsd: [mesagl-mangled]
+  freebsd: [mesa-libs]
   gentoo: [virtual/opengl]
   macports: [mesa]
   opensuse: [Mesa-devel]
@@ -3821,7 +3854,7 @@ pkg-config:
   cygwin: [pkg-config]
   debian: [pkg-config]
   fedora: [pkgconfig]
-  freebsd: [pkg-config]
+  freebsd: [pkgconf]
   gentoo: [virtual/pkgconfig]
   macports: [pkgconfig]
   opensuse: [pkg-config]
@@ -3902,6 +3935,7 @@ proj:
   arch: [proj]
   debian: [libproj-dev]
   fedora: [proj-devel]
+  freebsd: [proj]
   gentoo: [sci-libs/proj]
   opensuse: [proj]
   slackware: [proj]
@@ -3915,6 +3949,7 @@ protobuf:
     stretch: [libprotobuf10]
     wheezy: [libprotobuf7]
   fedora: [protobuf]
+  freebsd: [protobuf]
   gentoo: [dev-libs/protobuf]
   macports: [protobuf-cpp]
   opensuse: [libprotobuf9]
@@ -3934,6 +3969,7 @@ protobuf-dev:
   arch: [protobuf]
   debian: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
   fedora: [protobuf-devel, protobuf-compiler]
+  freebsd: [protobuf]
   gentoo: [dev-libs/protobuf]
   macports: [protobuf-cpp]
   opensuse: [protobuf-devel]
@@ -3977,6 +4013,7 @@ qt4-qmake:
   arch: [qt4]
   debian: [qt4-qmake]
   fedora: [qt-devel]
+  freebsd: [qt4-qmake]
   gentoo: ['dev-qt/qtcore:4']
   macports: [qt4-mac]
   opensuse: [libqt4-devel]
@@ -3986,6 +4023,7 @@ qt5-qmake:
   arch:   [qt5-base]
   debian: [qt5-qmake]
   fedora: [qt5-qtbase-devel]
+  freebsd: [qt5-qmake]
   gentoo: ['dev-qt/qtcore:5']
   opensuse: [libqt5-qtbase-common-devel]
   slackware: [qt5]
@@ -3994,6 +4032,7 @@ qtbase5-dev:
   arch:   [qt5-base]
   debian: [qtbase5-dev]
   fedora: [qt5-qtbase-devel]
+  freebsd: [qt5-core]
   gentoo: ['dev-qt/qtcore:5']
   opensuse: [libqt5-qtbase-common-devel, libqt5-qtbase-devel]
   slackware: [qt5]
@@ -4061,6 +4100,7 @@ sbcl:
   arch: [sbcl]
   debian: [sbcl]
   fedora: [sbcl]
+  freebsd: [sbcl]
   gentoo: [dev-lisp/sbcl]
   macports: [sbcl]
   opensuse: [sbcl]
@@ -4356,6 +4396,7 @@ tango-icon-theme:
   arch: [tango-icon-theme]
   debian: [tango-icon-theme]
   fedora: [tango-icon-theme]
+  freebsd: [icons-tango]
   gentoo: [x11-themes/tango-icon-theme]
   macports: [tango-icon-theme]
   mandrake: [tango-icon-theme]
@@ -4460,6 +4501,7 @@ tinyxml:
   arch: [tinyxml]
   debian: [libtinyxml-dev]
   fedora: [tinyxml-devel]
+  freebsd: [tinyxml]
   gentoo: [dev-libs/tinyxml]
   macports: [tinyxml]
   opensuse: [tinyxml-devel]
@@ -4470,6 +4512,7 @@ tinyxml2:
   arch: [tinyxml2]
   debian: [libtinyxml2-dev]
   fedora: [tinyxml2-devel]
+  freebsd: [tinyxml2]
   gentoo: [dev-libs/tinyxml2]
   opensuse: [tinyxml2-devel]
   ubuntu: [libtinyxml2-dev]
@@ -4790,6 +4833,7 @@ yaml-cpp:
     stretch: [libyaml-cpp-dev]
     wheezy: [libyaml-cpp-dev]
   fedora: [yaml-cpp-devel]
+  freebsd: [yaml-cpp]
   gentoo: [dev-cpp/yaml-cpp]
   macports: [yaml-cpp]
   opensuse: [yaml-cpp-devel]
