--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4055,6 +4055,8 @@ python3-pyparsing:
   ubuntu: [python3-pyparsing]
 python3-pytest:
   arch: [python-pytest]
+  debian: [python3-pytest]
+  gentoo: [dev-python/pytest]
   ubuntu: [python3-pytest]
 python3-ruamel.yaml:
   debian:
