--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14701,7 +14701,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/staubli.git
-      version: hydro-devel
+      version: indigo-devel
     status: developed
   staubli_experimental:
     doc:
