add azure-iothub-device-client pip package

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8,6 +8,16 @@ adafruit-pca9685-pip:
   ubuntu:
     pip:
       packages: [adafruit-pca9685]
+azure-iothub-device-client-pip:
+  debian:
+    pip:
+      packages: [azure-iothub-device-client]
+  fedora:
+    pip:
+      packages: [azure-iothub-device-client]
+  ubuntu:
+    pip:
+      packages: [azure-iothub-device-client]
 catkin_pkg:
   gentoo: [dev-python/catkin_pkg]
 cmakelint-pip:
