--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9984,10 +9984,11 @@ repositories:
       - trac_ik_examples
       - trac_ik_kinematics_plugin
       - trac_ik_lib
+      - trac_ik_python
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/traclabs/trac_ik-release.git
-      version: 1.4.7-0
+      version: 1.4.9-0
     source:
       type: git
       url: https://bitbucket.org/traclabs/trac_ik.git
