serial_utils: 0.1.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9248,6 +9248,17 @@ repositories:
       url: https://github.com/wjwwood/serial.git
       version: master
     status: maintained
+  serial_utils:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/wjwwood/serial_utils-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/wjwwood/serial_utils.git
+      version: master
+    status: maintained
   shared_autonomy_manipulation:
     doc:
       type: git
