openni_camera: 1.11.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5941,11 +5941,12 @@ repositories:
     release:
       packages:
       - openni_camera
+      - openni_description
       - openni_launch
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-gbp/openni_camera-release.git
-      version: 1.10.0-0
+      version: 1.11.0-0
     source:
       type: git
       url: https://github.com/ros-drivers/openni_camera.git
