--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8641,11 +8641,12 @@ repositories:
     release:
       packages:
       - openni_camera
+      - openni_description
       - openni_launch
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-gbp/openni_camera-release.git
-      version: 1.10.0-0
+      version: 1.11.0-0
     source:
       type: git
       url: https://github.com/ros-drivers/openni_camera.git
