jsk_control: 0.1.14-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3634,6 +3634,7 @@ repositories:
       version: master
     release:
       packages:
+      - cmd_vel_smoother
       - contact_states_observer
       - eus_nlopt
       - eus_qp
@@ -3648,7 +3649,11 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tork-a/jsk_control-release.git
-      version: 0.1.13-0
+      version: 0.1.14-0
+    source:
+      type: git
+      url: https://github.com/jsk-ros-pkg/jsk_control.git
+      version: master
     status: developed
   jsk_model_tools:
     release:
