--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 # command to run tests
 script:
-  - nosetests -s
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then nosetests -s; fi'
   - yamllint */
 
 notifications:
@@ -29,4 +29,4 @@ branches:
     - master 
 
 before_install: 
-  - openssl aes-256-cbc -K $encrypted_ff7a3197787f_key -iv $encrypted_ff7a3197787f_iv -in .git-credentials.enc -out .git-credentials -d
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then openssl aes-256-cbc -K $encrypted_ff7a3197787f_key -iv $encrypted_ff7a3197787f_iv -in .git-credentials.enc -out .git-credentials -d; fi'
