--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9247,6 +9247,8 @@ repositories:
       url: https://github.com/wjwwood/serial-release.git
       version: 1.2.1-0
     source:
+      test_commits: false
+      test_pull_requests: true
       type: git
       url: https://github.com/wjwwood/serial.git
       version: master
@@ -9258,6 +9260,8 @@ repositories:
       url: https://github.com/wjwwood/serial_utils-release.git
       version: 0.1.0-0
     source:
+      test_commits: false
+      test_pull_requests: true
       type: git
       url: https://github.com/wjwwood/serial_utils.git
       version: master
