Added pip suffix to pyrebase key

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -134,7 +134,7 @@ pyqt5-dev-tools:
   fedora: [python-qt5-devel]
   gentoo: [dev-python/PyQt5]
   ubuntu: [pyqt5-dev-tools]
-pyrebase:
+pyrebase-pip:
   debian:
     pip:
       packages: [pyrebase]
