Remove test_pull_requests

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -26,7 +26,7 @@ repositories:
       - abb_irb4400_support
       - abb_irb5400_support
       - abb_irb6600_support
-      - abb_irb6640_moveit_config
+      - abb_irb6640_moveit_config      test_pull_requests: true
       - abb_irb6640_support
       - abb_resources
       tags:
@@ -117,7 +117,6 @@ repositories:
       url: https://github.com/tork-a/adi_driver-release.git
       version: 1.0.0-0
     source:
-      test_pull_requests: true
       type: git
       url: https://github.com/tork-a/adi_driver.git
       version: master
