Fix misedited line

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -26,7 +26,7 @@ repositories:
       - abb_irb4400_support
       - abb_irb5400_support
       - abb_irb6600_support
-      - abb_irb6640_moveit_config      test_pull_requests: true
+      - abb_irb6640_moveit_config
       - abb_irb6640_support
       - abb_resources
       tags:
