--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3196,6 +3196,10 @@ repositories:
       packages:
       - fanuc
       - fanuc_driver
+      - fanuc_lrmate200ib3l_moveit_config
+      - fanuc_lrmate200ib_moveit_config
+      - fanuc_lrmate200ib_moveit_plugins
+      - fanuc_lrmate200ib_support
       - fanuc_lrmate200ic5h_moveit_config
       - fanuc_lrmate200ic5l_moveit_config
       - fanuc_lrmate200ic_moveit_config
@@ -3222,7 +3226,7 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-industrial-release/fanuc-release.git
-      version: 0.4.3-0
+      version: 0.4.4-0
     source:
       type: git
       url: https://github.com/ros-industrial/fanuc.git
