--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1320,6 +1320,7 @@ python-gtk2:
       packages: []
   rhel: [pygtk2]
   ubuntu:
+    artful: [python-gtk2]
     lucid: [python-gtk2]
     maverick: [python-gtk2]
     natty: [python-gtk2]
@@ -1329,6 +1330,12 @@ python-gtk2:
     raring: [python-gtk2]
     saucy: [python-gtk2]
     trusty: [python-gtk2]
+    utopic: [python-gtk2]
+    vivid: [python-gtk2]
+    wily: [python-gtk2]
+    xenial: [python-gtk2]
+    yakkety: [python-gtk2]
+    zesty: [python-gtk2]
 python-h5py:
   debian: [python-h5py]
   fedora: [h5py]
