--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1936,7 +1936,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/stonier/ecl_lite.git
-      version: devel
+      version: release/0.61-indigo-kinetic
     release:
       packages:
       - ecl_config
@@ -1954,8 +1954,8 @@ repositories:
     source:
       type: git
       url: https://github.com/stonier/ecl_lite.git
-      version: devel
-    status: developed
+      version: release/0.61-indigo-kinetic
+    status: maintained
   ecl_manipulation:
     doc:
       type: git
@@ -2010,8 +2010,8 @@ repositories:
     source:
       type: git
       url: https://github.com/stonier/ecl_tools.git
-      version: devel
-    status: developed
+      version: release/0.61-indigo-kinetic
+    status: maintained
   ecto:
     release:
       tags:
