--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2839,7 +2839,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/stonier/ecl_lite.git
-      version: devel
+      version: release/0.61-indigo-kinetic
     release:
       packages:
       - ecl_config
@@ -2857,7 +2857,7 @@ repositories:
     source:
       type: git
       url: https://github.com/stonier/ecl_lite.git
-      version: devel
+      version: release/0.61-indigo-kinetic
     status: maintained
   ecl_manipulation:
     doc:
@@ -2913,7 +2913,7 @@ repositories:
     source:
       type: git
       url: https://github.com/stonier/ecl_tools.git
-      version: devel
+      version: release/0.61-indigo-kinetic
     status: maintained
   ecto:
     release:
