--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8762,6 +8762,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt_pose_view.git
       version: master
     status: maintained
+  rqt_pr2_dashboard:
+    doc:
+      type: git
+      url: https://github.com/PR2/rqt_pr2_dashboard.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_pr2_dashboard-release.git
+      version: 0.4.0-0
+    source:
+      type: git
+      url: https://github.com/pr2/rqt_pr2_dashboard.git
+      version: kinetic-devel
+    status: unmaintained
   rqt_publisher:
     doc:
       type: git
