custom_landmark_2d: 1.0.0-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2363,6 +2363,21 @@ repositories:
       url: https://github.com/AndreaCensi/csm.git
       version: master
     status: maintained
+  custom_landmark_2d:
+    doc:
+      type: git
+      url: https://github.com/matthew-liu/custom_landmark_2d.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/MatthewLiuRelease/custom_landmark_2d-release.git
+      version: 1.0.0-0
+    source:
+      type: git
+      url: https://github.com/matthew-liu/custom_landmark_2d.git
+      version: indigo-devel
+    status: developed
   cv_backports:
     release:
       tags:
