--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -177,6 +177,21 @@ repositories:
       url: https://github.com/ros/angles.git
       version: master
     status: maintained
+  app_manager:
+    doc:
+      type: git
+      url: https://github.com/pr2/app_manager.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/app_manager-release.git
+      version: 1.0.5-0
+    source:
+      type: git
+      url: https://github.com/pr2/app_manager.git
+      version: kinetic-devel
+    status: unmaintained
   apriltags2_ros:
     doc:
       type: git
