--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6588,6 +6588,23 @@ repositories:
       url: https://github.com/pr2/pr2_controllers.git
       version: kinetic-devel
     status: unmaintained
+  pr2_ethercat_drivers:
+    doc:
+      type: git
+      url: https://github.com/PR2/pr2_ethercat_drivers.git
+      version: kinetic-devel
+    release:
+      packages:
+      - fingertip_pressure
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pr2-gbp/pr2_ethercat_drivers-release.git
+      version: 1.8.17-0
+    source:
+      type: git
+      url: https://github.com/PR2/pr2_ethercat_drivers.git
+      version: kinetic-devel
+    status: unmaintained
   pr2_mechanism:
     doc:
       type: git
