--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6643,6 +6643,24 @@ repositories:
       url: https://github.com/PR2/pr2_ethercat_drivers.git
       version: kinetic-devel
     status: unmaintained
+  pr2_kinematics:
+    doc:
+      type: git
+      url: https://github.com/pr2/pr2_kinematics.git
+      version: kinetic-devel
+    release:
+      packages:
+      - pr2_arm_kinematics
+      - pr2_kinematics
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pr2-gbp/pr2_kinematics-release.git
+      version: 1.0.9-0
+    source:
+      type: git
+      url: https://github.com/pr2/pr2_kinematics.git
+      version: kinetic-devel
+    status: unmaintained
   pr2_mechanism:
     doc:
       type: git
