--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6556,6 +6556,29 @@ repositories:
       url: https://github.com/mrpt-ros-pkg/pose_cov_ops.git
       version: master
     status: maintained
+  pr2_apps:
+    doc:
+      type: git
+      url: https://github.com/pr2/pr2_apps.git
+      version: kinetic-devel
+    release:
+      packages:
+      - pr2_app_manager
+      - pr2_apps
+      - pr2_mannequin_mode
+      - pr2_position_scripts
+      - pr2_teleop
+      - pr2_teleop_general
+      - pr2_tuckarm
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/pr2-gbp/pr2_apps-release.git
+      version: 0.6.0-0
+    source:
+      type: git
+      url: https://github.com/pr2/pr2_apps.git
+      version: kinetic-devel
+    status: unmaintained
   pr2_common:
     doc:
       type: git
